--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 
   <script src="script.js"></script>
 </head>
-<body ng-app="CloudBoard">
+<body ng-app="CloudBoard" style="background-color: #dbdbdb;">
   <nav class="navbar navbar-defaul" style="border-bottom: 1px solid black; background-color: #ff8421;">
     <div class="container">
       <div class="navbar-header" style="margin: auto;">
@@ -33,7 +33,17 @@
   </div>
 
   <div ng-controller="boards" class="container">
-    <h1 ng-show="loggedIn">Welcome, {{name}}!</h1>
+    <h1 ng-show="loggedIn" style="text-align:center; padding-top:20px;">Welcome, {{name}}!</h1>
+    <div class="boardsView">
+      <div ng-repeat="x in boards" class="col-lg-12">
+        <div class="board" ng-class="x.hasContent ? 'board-full' : 'board-empty'">
+          <h3 style="text-align:center;">Board {{x.id}}</h3>
+          <div class="board-text" ng-show="x.hasContent">
+            {{x.preview}}
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
