--- a/home.html
+++ b/home.html
@@ -3,7 +3,8 @@
 <head>
   <title>CloudBoard</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <!-- Bootstap -->
+
+  <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -13,21 +14,24 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular-cookies.min.js"></script>
 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <script src="script.js"></script>
 </head>
 <body ng-app="CloudBoard" style="background-color: #dbdbdb;">
-  <nav class="navbar navbar-defaul" style="border-bottom: 1px solid black; background-color: #FF7233;">
+  <nav class="navbar navbar-default" style="border-bottom: 1px solid black; background-color: #FF7800;">
     <div class="container">
       <div class="navbar-header" style="margin: auto;">
         <h1>CloudBoard</h1>
       </div>
     </div>
+    <i class="material-icons" style="font-size:36px; cursor:pointer;">menu</i>
   </nav>
 
   <div ng-controller="login" ng-show="!loggedIn" class="overlay" style="background-color:rgba(0, 0, 0, 0.5);">
       <div class="loginWindow">
-        <input type="text" ng-model="username" style="width:100%" placeholder="username" /> <br />
-        <input type="password" ng-model="password" style="width:100%" placeholder="password" /> <br />
+        <input type="text" ng-model="username" style="width:100%" placeholder="username" autofocus /> <br />
+        <input type="password" ng-model="password" style="width:100%" placeholder="password" ng-keyup="keyCheck($event)" /> <br />
         <button ng-click="logIn()" style="width:100%">Log In </button>
       </div>
   </div>
