--- a/home.html
+++ b/home.html
@@ -61,6 +61,12 @@
         </div>
       </div>
     </div>
+    <div id="copyAlert" class="alert alert-success alert-dismissible fade show" role="alert" style="position: fixed; bottom: 0; width: 100%; left: 0; display: none;">
+      Successfully coppied data from board!
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
   </div>
 </body>
 </html>
