--- a/home.html
+++ b/home.html
@@ -35,6 +35,7 @@
     <i class="material-icons" style="font-size:36px; cursor:pointer;" id="settingsButton" ng-click="toggle()">menu</i>
     <div class="settingsOptions">
       <span class="settingsLink" ng-click="logOut()">Log Out</span>
+      <a href="faq.html" style="color:black; text-decoration:none">FAQ</a>
     </div>
   </div>
 
