add more to faq page

--- a/faq.html
+++ b/faq.html
@@ -30,11 +30,9 @@
       </div>
     </div>
   </nav>
-  <p style="text-align:center">
-    What is CloudBoard?
-  </p>
-  <p style="text-align:center">
-    Is it free to use?
-  </p>
+  <p style="text-align:center; padding-top:10px"><b>What is CloudBoard?</b></p>
+  <p style="text-align:center">CloudBoard is a universal clipboard, created in EECS 498 at the University of Michigan for Brad, allowing him (and now any user), to copy text or images to a clipboard linked to your account, and paste from any clipboard on a different device.</p>
+  <p style="text-align:center"><b>Is it free to use?</b></p>
+  <p style="text-align:center">Yes, CloudBoard costs nothing to use!</p>
 </body>
 </html>
